--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script src="./js/accordion.js" defer></script>
     <script src="./js/modal.js" defer></script>
     <script src="./js/smooth-scroll.js" defer></script>
+    <script src="./js/timer.js" defer></script>
 </head>
 
 <body>
